	 WM_CREATE handler into ui_init, moved most of WinMain into ui_init,
	 changed uidisplay_init be exactly the same one as on gtk ui, changes
	 to win32display_area to have more similar structure to that of gtk
	 ui's (Marek).
20080724 ui/win32/win32display.c: Win32: win32 ui refactoring: removed
	 register_scalers_noresize and win32display_setsize, replaced
	 uidisplay_hotswap_gfx_mode with the code from gtk ui (Marek).
20080725 ui/win32/{win32ui.c,win32display.c}: Win32: Refactored WM_PAINT
	 handler, fixed crash when the screen is resized to 3x, fixed unclosed
	 handle to the drawing area (Marek).
20080728 utils.c: add missing return.
20080728 ui/win32/statusbar.c: Win32: implemented transparency for the status
	 bar icons (Marek).
20080728 configure.in,keysyms.pl,ui/win32/{browse.{c,h,rc},debugger.{c,h,rc},
	 memorybrowser.{c,h,rc},picture.{c,h,rc},pokefinder.{c,h,rc},
	 rollback.c}: Win32: moved Windows version requirement from being local
	 to some units to be a fuse-wide requirement and adjusted the code
	 accordingly (Marek).
20080730 ui/win32/debugger.{c,h}: Win32: implemented showing and hiding panes,
	 without resizing for now (Marek).
20080731 ui/win32/{win32ui.c,debugger.{c,h,rc},win32internals.h}: Win32:
	 partially redesigned the debugger window to make the structure similar
	 to gtk ui, implemented monospaced font code, which is used by debugger
	 only for now (Marek).
20080810 ui/win32/win32ui.c: Win32: modified the procedure preventing to draw
	 the mouse cursor if it's 'grabbed' to explictly call default window
	 procedure if the the mouse cursor is not grabbed, to avoid any
	 confussion (Marek).
20080810 ui/win32/{win32ui.c,debugger.c,win32internals.h}: Win32: fixed the
	 pause/unpause routines by introducing win32ui_process_messages - an
	 equivalent of gtk's gtk_main (Marek).
20080810 ui/win32/{options,options-resource,options-header}.pl: Win32: renamed
	 options dialogs from IDG_* to IDD_* to follow the naming convention
	 (Marek).